--- a/home.html
+++ b/home.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="style.css">
-  </head>
-  <body> 
+</head>
+
+<body class="bg-[url(chawen.jpg)] bg-cover   ">
     
-
-
+    <h1 class="text-5xl text-center text-black flex items-center  justify-center">Shoot beyond the limits</h1>
+    <div class="flex items-center justify-center h-[575px]">
+        <button class="bg-green-700 rounded-full py-3 px-6 flex items-center justify-center mx-10 text-white">Get started <img
+                src="right.png" alt="right" class=""></button>
+</div>
+     
 </body>
+
 </html>
