en cette partie j'ai travaile sur l'image qui trouve entre la page

--- a/home1.html
+++ b/home1.html
@@ -15,36 +15,36 @@
     </header>
     <h1 class="text-4xl p-2 text-center">bloger of the week</h1>
 
-<section>
-    <div class="  gap-4 flex  ">
-        <div class=" ">
-            <img src="yueying-sun-F9-Em4idgvU-unsplash.jpg" alt="yueying-sun-F9-Em4idgvU-unsplash"
-                class="rounded-full h-18 flex items-center justify-center w-18 ">
-            <p class="flex space-x-4 flex-wrap justify-center items-center">land</p>
-        </div>
-        <div class=" ">
-            <img src="pexels-juriadi-paddo-1757013033-35423377.jpg" alt="pexels-juriadi-paddo-1757013033-35423377"
-                class="rounded-full h-18 flex items-center justify-center w-18 ">
-            <p class="flex space-x-4 flex-wrap justify-center items-center">land</p>
-        </div>
-        <div class=" ">
-            <img src="dmitry-spravko-YbkarNfl1GY-unsplash.jpg" alt="dmitry-spravko-YbkarNfl1GY-unsplash"
-                class="rounded-full h-18 flex items-center justify-center w-18 ">
-            <p class="flex space-x-4 flex-wrap justify-center items-center">yueying</p>
-        </div>
-        <div class=" ">
-            <img src="daniel-snipes-OAzRbFHSZLE-unsplash.jpg" alt="daniel-snipes-OAzRbFHSZLE-unsplash"
-                class="rounded-full h-18 flex items-center justify-center w-18 ">
-            <p class="flex space-x-4 flex-wrap justify-center items-center">lila</p>
-        </div>
-        <div class=" ">
-            <img src="land-o-lakes-inc-IYLLF511aOY-unsplash.jpg" alt="land-o-lakes-inc-IYLLF511aOY-unsplash"
-                class="rounded-full h-18 flex items-center justify-center w-18 ">
-            <p class="flex space-x-4 flex-wrap justify-center items-center">nora</p>
-        </div>
-       
+    <section>
+        <div class="  gap-4 flex  ">
+            <div class=" ">
+                <img src="yueying-sun-F9-Em4idgvU-unsplash.jpg" alt="yueying-sun-F9-Em4idgvU-unsplash"
+                    class="rounded-full h-18 flex items-center justify-center w-18 ">
+                <p class="flex space-x-4 flex-wrap justify-center items-center">land</p>
+            </div>
+            <div class=" ">
+                <img src="pexels-juriadi-paddo-1757013033-35423377.jpg" alt="pexels-juriadi-paddo-1757013033-35423377"
+                    class="rounded-full h-18 flex items-center justify-center w-18 ">
+                <p class="flex space-x-4 flex-wrap justify-center items-center">land</p>
+            </div>
+            <div class=" ">
+                <img src="dmitry-spravko-YbkarNfl1GY-unsplash.jpg" alt="dmitry-spravko-YbkarNfl1GY-unsplash"
+                    class="rounded-full h-18 flex items-center justify-center w-18 ">
+                <p class="flex space-x-4 flex-wrap justify-center items-center">yueying</p>
+            </div>
+            <div class=" ">
+                <img src="daniel-snipes-OAzRbFHSZLE-unsplash.jpg" alt="daniel-snipes-OAzRbFHSZLE-unsplash"
+                    class="rounded-full h-18 flex items-center justify-center w-18 ">
+                <p class="flex space-x-4 flex-wrap justify-center items-center">lila</p>
+            </div>
+            <div class=" ">
+                <img src="land-o-lakes-inc-IYLLF511aOY-unsplash.jpg" alt="land-o-lakes-inc-IYLLF511aOY-unsplash"
+                    class="rounded-full h-18 flex items-center justify-center w-18 ">
+                <p class="flex space-x-4 flex-wrap justify-center items-center">nora</p>
+            </div>
 
-</section>
+
+    </section>
 
 
     <h1 class="text-3xl  p-3   font-bold ">What do you want to read ?</h1>
@@ -58,6 +58,32 @@
             <button class="rounded-full py-3 px-6 bg-white hover:bg-pink-50 border-2 border-black"> river</button>
 
         </div>
+        <br>
+        <br>
+        <section class="  grid  lg:grid-cols-4 xl-grid-cols-4 mr-5 ml-5">
+            <div class=" bg-white shadow-lg rounded-lg">
+                <img src="people.jpg" alt="people" class="rounded-t-lg w-full">
+                <div class="p-4 flex justify-around">
+                    <h3 class="text-2xl">yellow river</h3>
+                    <p><img src="location.png" alt="location">maroc</p>
+                    <p><img src="clock.png" alt="time" width="16"> 15 min </p>
+                    <p><img src="view.png" alt="view" width="16"> 12 K</p>
+
+                </div>
+            </div>
+
+
+        </section>
+
+
+        
+
+
+
+
+
+
+
     </section>
 
 
