en cette partie j'ai travailler sur les image qui suivre la page principale de la page home 2

--- a/home1.html
+++ b/home1.html
@@ -60,7 +60,7 @@
         </div>
         <br>
         <br>
-        <section class="  grid  lg:grid-cols-4 xl-grid-cols-4 mr-5 ml-5">
+        <div class="  grid  lg:grid-cols-4 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg ">
             <div class=" bg-white shadow-lg rounded-lg">
                 <img src="people.jpg" alt="people" class="rounded-t-lg w-full">
                 <div class="p-4 flex justify-around">
@@ -70,27 +70,29 @@
                     <p><img src="view.png" alt="view" width="16"> 12 K</p>
 
                 </div>
+                <p class="text-center">rounded-b-lg</p>
+                <br>
+                <br>
             </div>
 
 
-        </section>
+        </div>
+    </section>
+    <br><br>
 
 
-        
-
-
-
-
-
-
-
+    <section>
+        <div class="flex justify-around "> 
+            <img src="koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
+       
+          <img src="sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">  
+        </div>
     </section>
 
 
 
 
 
-    </div>
 
 </body>
 
