en cette partie j'ai travalle sur la page  information sur la page

--- a/code/home1.html
+++ b/code/home1.html
@@ -11,8 +11,8 @@
 
 <body>
     <header class="flex justify-around">
-        <img src="search-interface-symbol.png" alt="search boutton" width="30">
-        <img src="menu (1).png" alt="menu" width="30">
+        <img src="/image/search-interface-symbol.png" alt="search boutton" width="30">
+        <img src="/image/menu (1).png" alt="menu" width="30">
     </header>
     <div>
         <h1 class="text-4xl p-2 text-center">bloger of the week</h1>
@@ -22,22 +22,22 @@
 
         <div class="  gap-4 flex  ">
             <div class=" ">
-                <img src="yueying-sun-F9-Em4idgvU-unsplash.jpg" alt="yueying-sun-F9-Em4idgvU-unsplash"
+                <img src="/image/yueying-sun-F9-Em4idgvU-unsplash.jpg" alt="yueying-sun-F9-Em4idgvU-unsplash"
                     class="rounded-full h-18 flex items-center justify-center w-18 ">
                 <h2 class="flex space-x-4 flex-wrap justify-center items-center">land</h2>
             </div>
             <div class=" ">
-                <img src="pexels-juriadi-paddo-1757013033-35423377.jpg" alt="pexels-juriadi-paddo-1757013033-35423377"
+                <img src="/image/pexels-juriadi-paddo-1757013033-35423377.jpg" alt="pexels-juriadi-paddo-1757013033-35423377"
                     class="rounded-full h-18 flex items-center justify-center w-18 ">
                 <p class="flex space-x-4 flex-wrap justify-center items-center">land</p>
             </div>
             <div class=" ">
-                <img src="dmitry-spravko-YbkarNfl1GY-unsplash.jpg" alt="dmitry-spravko-YbkarNfl1GY-unsplash"
+                <img src="/image/dmitry-spravko-YbkarNfl1GY-unsplash.jpg" alt="dmitry-spravko-YbkarNfl1GY-unsplash"
                     class="rounded-full h-18 flex items-center justify-center w-18 ">
                 <p class="flex space-x-4 flex-wrap justify-center items-center">yueying</p>
             </div>
             <div class=" ">
-                <img src="daniel-snipes-OAzRbFHSZLE-unsplash.jpg" alt="daniel-snipes-OAzRbFHSZLE-unsplash"
+                <img src="/image/daniel-snipes-OAzRbFHSZLE-unsplash.jpg" alt="daniel-snipes-OAzRbFHSZLE-unsplash"
                     class="rounded-full h-18 flex items-center justify-center w-18 ">
                 <p class="flex space-x-4 flex-wrap justify-center items-center">lila</p>
             </div>
@@ -60,14 +60,16 @@
         </div>
         <br>
         <br>
-        <div class="  grid  lg:grid-cols-4 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg ">
+        <div class="  grid  lg:grid-cols-4 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg  transform motion-safe:hover:scale-105">
+            <a href="/code/home2.html">
             <div class=" bg-white shadow-lg rounded-lg">
-                <img src="people.jpg" alt="people" class="rounded-t-lg w-full">
+                <img src="/image/people.jpg" alt="people" class="rounded-t-lg w-full">
                 <div class="p-4 flex justify-around">
                     <h2 class="text-2xl">yellow river</h2>
-                    <p><img src="location.png" alt="location">maroc</p>
-                    <p><img src="clock.png" alt="time" width="16"> 15 min </p>
-                    <p><img src="view.png" alt="view" width="16"> 12 K</p>
+                    <p><img src="/image/location.png" alt="location">maroc</p>
+                    <p><img src="/image/clock.png" alt="time" width="16"> 15 min </p>
+                    <p><img src="/image/view.png" alt="view" width="16"> 12 K</p>
+                </a>
 
                 </div>
                 <p class="text-center">rounded-b-lg</p>
@@ -87,9 +89,9 @@
         <br> <br>
 
         <div class="flex justify-around ">
-            <img src="koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
+            <img src="/image/koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
 
-            <img src="sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
+            <img src="/image/sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
         </div>
     </div>
     <br>
@@ -99,23 +101,23 @@
     <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200">
         <div>
             <button class="hover:bg-green-500 rounded-full px-3 py-2" >
-                <img src="home.png" alt="home" width="32">
+                <img src="/image/home.png" alt="home" width="32">
             </button>
         </div>
         <div>
             <button  class="hover:bg-green-500 rounded-full px-3 py-2">
-                <img src="location.png" alt=" location" width="32">
+                <img src="/image/location.png" alt=" location" width="32">
             </button>
         </div>
         <div>
             <button  class="hover:bg-green-500 rounded-full px-3 py-2">
-                <img src="heart.png" alt="heart" width="32">
+                <img src="/image/heart.png" alt="heart" width="32">
 
             </button>
         </div>
         <div>
             <button  class="hover:bg-green-500 rounded-full px-3 py-2">
-                <img src="user.png" alt="user" width="32">
+              <a href="/code/profile.html">  <img src="/image/user.png" alt="user" width="32" ></a>
             </button>
         </div>
 
