en cette partie j'ai travailler sur page profile

--- a/code/home1.html
+++ b/code/home1.html
@@ -60,19 +60,19 @@
         </div>
         <br>
         <br>
-        <div class="  grid  lg:grid-cols-4 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg  transform motion-safe:hover:scale-105">
-            <a href="/code/home2.html">
+    <div class="  grid  lg:grid-cols-4 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg ">
+            
             <div class=" bg-white shadow-lg rounded-lg">
                 <img src="/image/people.jpg" alt="people" class="rounded-t-lg w-full">
-                <div class="p-4 flex justify-around">
+                <div class="  py-4 flex justify-around ">
                     <h2 class="text-2xl">yellow river</h2>
                     <p><img src="/image/location.png" alt="location">maroc</p>
                     <p><img src="/image/clock.png" alt="time" width="16"> 15 min </p>
                     <p><img src="/image/view.png" alt="view" width="16"> 12 K</p>
-                </a>
+                
 
                 </div>
-                <p class="text-center">rounded-b-lg</p>
+                <a href="/code/profile.html"><p class="text-center">rounded-b-lg</p></a>
                 <br>
                 <br>
             </div>
