en cette partie j'ai terminie page profile extention mobile

--- a/code/profile.html
+++ b/code/profile.html
@@ -35,12 +35,17 @@
                 <button class="border-3 black rounded-full  px-5 py-2">  forest</button>
                 </div>
     </section>
-    
+
     <section>
-         <div>
+         <div class="flex-wrap ">
 
         <br> <br>
 
+        <div class="flex justify-around  my-6 ">
+            <img src="/image/koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
+
+            <img src="/image/sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
+        </div>
         <div class="flex justify-around ">
             <img src="/image/koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
 
