en cette partie j'ai travaille sur le responsive de descktop

--- a/code/home1.html
+++ b/code/home1.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>voyage</title>
+    <title>home1</title>
 
 </head>
 
 <body>
     <header class="flex justify-around">
         <img src="/image/search-interface-symbol.png" alt="search boutton" width="30">
-        <img src="/image/menu (1).png" alt="menu" width="30">
+        <img src="/image/menu (1).png" alt="menu" width="30" class="lg:">
     </header>
     <div>
         <h1 class="text-4xl p-2 text-center">bloger of the week</h1>
@@ -23,7 +23,7 @@
         <div class="  gap-4 flex  ">
             <div class=" ">
                 <img src="/image/yueying-sun-F9-Em4idgvU-unsplash.jpg" alt="yueying-sun-F9-Em4idgvU-unsplash"
-                    class="rounded-full h-18 flex items-center justify-center w-18 ">
+                    class="rounded-full h-18 flex items-center justify-center w-18  ">
                 <h2 class="flex space-x-4 flex-wrap justify-center items-center">land</h2>
             </div>
             <div class=" ">
@@ -60,10 +60,11 @@
         </div>
         <br>
         <br>
-    <div class="  grid  lg:grid-cols-4 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg ">
+        <div class="grid lg:grid-cols-12 ">
+    <div class="  grid cols-span-11   xl-grid-cols-3 mr-5 ml-5 lg:ml-70  border-2 border-black rounded-t-lg rounded-b-lg lg:w-[120vh] ">
             
-            <div class=" bg-white shadow-lg rounded-lg">
-                <img src="/image/people.jpg" alt="people" class="rounded-t-lg w-full">
+            <div class=" bg-white shadow-lg  rounded-lg">
+                <img src="/image/people.jpg" alt="people" class=" lg:h-[60vh] bg-cover bg-center lg:w-[120vh] rounded-t-lg w-full">
                 <div class="  py-4 flex justify-around ">
                     <h2 class="text-2xl">yellow river</h2>
                     <p><img src="/image/location.png" alt="location">maroc</p>
@@ -72,13 +73,13 @@
                 
 
                 </div>
-                <a href="/code/profile.html"><p class="text-center">rounded-b-lg</p></a>
+                <a href="/code/home2.html"><p class="text-center">rounded-b-lg</p></a>
                 <br>
                 <br>
             </div>
 
 
-        </div>
+        </div></div>
     </section>
 
 
@@ -89,18 +90,18 @@
         <br> <br>
 
         <div class="flex justify-around ">
-            <img src="/image/koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
+            <img src="/image/koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg lg:h-[50vh] lg:w-[40vw] ">
 
-            <img src="/image/sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
+            <img src="/image/sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg lg:h-[50vh] lg:w-[40vw]">
         </div>
     </div>
     <br>
     <br>
 
 
-    <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200">
+    <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 lg:bg-white">
         <div>
-            <button class="hover:bg-green-500 rounded-full px-3 py-2" >
+            <button class="hover:bg-green-500  bg-green-600 rounded-full px-3 py-2" >
                 <img src="/image/home.png" alt="home" width="32">
             </button>
         </div>
