--- a/code/profile.html
+++ b/code/profile.html
@@ -53,6 +53,32 @@
         </div>
     </div>
     </section>
+     <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200">
+        <div>
+            <button class="hover:bg-green-500 rounded-full px-3 py-2" >
+                <a href="/code/home.html"><img src="/image/home.png" alt="home" width="32"></a>
+                
+            </button>
+        </div>
+        <div>
+            <button  class="hover:bg-green-500 rounded-full px-3 py-2">
+                <img src="/image/location.png" alt=" location" width="32">
+            </button>
+        </div>
+        <div>
+            <button  class="hover:bg-green-500 rounded-full px-3 py-2">
+                <img src="/image/heart.png" alt="heart" width="32">
+
+            </button>
+        </div>
+        <div>
+            <button  class="hover:bg-green-500  bg-green-600 rounded-full px-3 py-2">
+                <img src="/image/user.png" alt="user" width="32">
+            </button>
+        </div>
+
+    </div>
+
     
 </body>
 </html>
