--- a/code/home.html
+++ b/code/home.html
@@ -1,10 +1,12 @@
 <!doctype html>
 <html>
+    <html lang="en">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <title>home</title>
 
 </head>
 
