--- a/code/home2.html
+++ b/code/home2.html
@@ -8,9 +8,9 @@
     <title>home2</title>
 </head>
 <body>
-    <div class="  grid  lg:grid-cols-4 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg ">
-            <div class=" bg-white shadow-lg rounded-lg">
-                <img src="/image/people.jpg" alt="people" class="rounded-t-lg w-full">
+    <div class="  grid   lg:grid-cols-12 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg  lg:ml-70  lg:w-[120vh] lg:mt-5">
+            <div class=" bg-white lg:col-span-12 shadow-lg rounded-lg">
+                <img src="/image/people.jpg" alt="people" class="rounded-t-lg w-full  lg:h-[60vh] bg-cover bg-center lg:w-[120vh]">
                 <div class="p-4 flex justify-around">
                     <h2 class="text-2xl">yellow river</h2>
                     <p><img src="/image/location.png" alt="location">maroc</p>
@@ -18,7 +18,7 @@
                     <p><img src="/image/view.png" alt="view" width="16"> 12 K</p>
 
                 </div>
-                <p class="text-center">rounded-b-lg</p>
+                <p class="text-center">BY ASMA ENNAFIA</p>
                 <br>
                 <br>
             </div>
@@ -28,10 +28,10 @@
 
 
 
-        <div>
+        <div class="lg:px-5">
             <br>
             <br>
-            <h1 class="text-center text-wrap"> Immerse yourself in the history and culture of Rabat with a personalized guided tour. Discover its iconic sites, hidden secrets, and benefit from expert advice for an authentic and rewarding experience. An unforgettable half-day of culture, history and beauty awaits you.
+            <h1 class="text-center text-wrap lg:text-3xl"> Immerse yourself in the history and culture of Rabat with a personalized guided tour. Discover its iconic sites, hidden secrets, and benefit from expert advice for an authentic and rewarding experience. An unforgettable half-day of culture, history and beauty awaits you.
 
                 See itinerary
  
@@ -42,10 +42,10 @@
 
 
 
-        <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200">
+        <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 lg:bg-white">
         <div>
-            <button class="hover:bg-green-500 rounded-full px-3 py-2" >
-                <img src="/image/home.png" alt="home" width="32">
+            <button class="hover:bg-green-500 bg-green-600 rounded-full px-3 py-2" >
+               <a href="/code/home.html"> <img src="/image/home.png" alt="home" width="32"></a>
             </button>
         </div>
         <div>
@@ -61,7 +61,7 @@
         </div>
         <div>
             <button  class="hover:bg-green-500 rounded-full px-3 py-2">
-                <img src="/image/user.png" alt="user" width="32">
+                <a href="/code/profile.html"><img src="/image/user.png" alt="user" width="32"></a>
             </button>
         </div>
 
