en cette partie j'ai travailler sur le responsive de deuxiemame page de home

--- a/code/profile.html
+++ b/code/profile.html
@@ -11,7 +11,7 @@
     <section>
 
         <div class="flex justify-between">
-            <h1 class="text-3xl font-bold text-center px-3 py-4"> Louis christophe</h1>
+            <h1 class="text-3xl font-bold text-center px-3 py-4 lg:py-5 px-5"> Louis christophe</h1>
             <img src="/image/people.jpg" alt="people" class="rounded-full py-3 px-4" width="120">
         </div>
         <button class="flex justify-center ml-16 border-3 black rounded-full  px-5 py-2">bloger</button>
