en cette partie j'ai travaile sur le responsives de descktop d'autre page

--- a/code/home2.html
+++ b/code/home2.html
@@ -8,10 +8,18 @@
     <title>home2</title>
 </head>
 <body>
+    <header class="flex justify-between md:justify-end mx-2">
+          <nav class="hidden md:flex  gap-5  mr-8 "> 
+        <a href="##">liked</a>
+        <a href="##">location</a>
+        <a href="/code/profile.html">login</a>
+
+    </nav>
+    </header>
     <div class="  grid   lg:grid-cols-12 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg  lg:ml-70  lg:w-[120vh] lg:mt-5">
             <div class=" bg-white lg:col-span-12 shadow-lg rounded-lg">
                 <img src="/image/people.jpg" alt="people" class="rounded-t-lg w-full  lg:h-[60vh] bg-cover bg-center lg:w-[120vh]">
-                <div class="p-4 flex justify-around">
+                <div class="p-4 flex justify-around ">
                     <h2 class="text-2xl">yellow river</h2>
                     <p><img src="/image/location.png" alt="location">maroc</p>
                     <p><img src="/image/clock.png" alt="time" width="16"> 15 min </p>
@@ -31,10 +39,10 @@
         <div class="lg:px-5">
             <br>
             <br>
-            <h1 class="text-center text-wrap lg:text-3xl"> Immerse yourself in the history and culture of Rabat with a personalized guided tour. Discover its iconic sites, hidden secrets, and benefit from expert advice for an authentic and rewarding experience. An unforgettable half-day of culture, history and beauty awaits you.
-
+            <h1 class="text-center  md:text-balance"> Immerse yourself in the history and culture of Rabat with a personalized guided tour. Discover its iconic sites, hidden secrets, and benefit from expert advice for an authentic and rewarding experience. An unforgettable half-day of culture, history and beauty awaits you.
+                See itinerar Wander blue-painted lanes and enjoy sweeping views over the Atlantic.
+                Immerse yourself in the history and culture of Rabat with a personalized guided tour. Discover its iconic sites, hidden secrets, and benefit from expert advice for an authentic and rewarding experience. An unforgettable half-day of culture, history and beauty awaits you.
                 See itinerary
- 
                 Wander blue-painted lanes and enjoy sweeping views over the Atlantic.
             </h1>
         </div>
@@ -42,7 +50,7 @@
 
 
 
-        <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 lg:bg-white">
+        <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 md:hidden">
         <div>
             <button class="hover:bg-green-500 bg-green-600 rounded-full px-3 py-2" >
                <a href="/code/home.html"> <img src="/image/home.png" alt="home" width="32"></a>
