--- a/code/profile.html
+++ b/code/profile.html
@@ -11,10 +11,10 @@
     <section>
 
         <div class="flex justify-between">
-            <h1 class="text-3xl font-bold text-center px-3 py-4 lg:py-5 px-5"> Louis christophe</h1>
-            <img src="/image/people.jpg" alt="people" class="rounded-full py-3 px-4" width="120">
+            <h1 class="text-3xl font-bold text-center px-3 py-4 lg:py-8 lg:px-5  lg:mr-55"> Louis christophe</h1>
+            <img src="/image/people.jpg" alt="people" class="rounded-full py-3 px-4 lg:mr-77  lg:py-5" width="120">
         </div>
-        <button class="flex justify-center ml-16 border-3 black rounded-full  px-5 py-2">bloger</button>
+        <button class="flex justify-center ml-16 border-3 black rounded-full  px-5 py-2 lg:ml-145">bloger</button>
         <br>
         <h2 class="text-2xl font-bold text-center">Les voyageurs de temps</h2>
 
@@ -32,7 +32,9 @@
                 <button class="border-3 black rounded-full  px-5 py-2">beach</button>
                 <button class="border-3 black rounded-full  px-5 py-2">river</button>
                 <button class="border-3 black rounded-full  px-5 py-2">mountais </button>
+                <button class="border-3 black rounded-full  px-5 py-2">  forest</button>       
                 <button class="border-3 black rounded-full  px-5 py-2">  forest</button>
+
                 </div>
     </section>
 
@@ -53,7 +55,7 @@
         </div>
     </div>
     </section>
-     <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200">
+     <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 md:hidden">
         <div>
             <button class="hover:bg-green-500 rounded-full px-3 py-2" >
                 <a href="/code/home.html"><img src="/image/home.png" alt="home" width="32"></a>
