en cette partie j'ai travailler sur la responsive et quelque modification sur tous les page

--- a/code/profile.html
+++ b/code/profile.html
@@ -8,11 +8,15 @@
     <title>profile</title>
 </head>
 <body>
+
+<header class="flex py-2 px-4">
+     <a href="/code/home2.html"><img src="/image/arrow.png" alt="arrow "></a>
+</header>
     <section>
 
         <div class="flex justify-between">
             <h1 class="text-3xl font-bold text-center px-3 py-4 lg:py-8 lg:px-5  lg:mr-55"> Louis christophe</h1>
-            <img src="/image/people.jpg" alt="people" class="rounded-full py-3 px-4 lg:mr-77  lg:py-5" width="120">
+            <img src="/image/people.jpg" alt="people" class=" rounded-full h-24 w-24 flex items-center justify-center   border-3 md:mr-12 md:mt-4 " width="120">
         </div>
         <button class="flex justify-center ml-16 border-3 black rounded-full  px-5 py-2 lg:ml-145">bloger</button>
         <br>
