--- a/code/home2.html
+++ b/code/home2.html
@@ -8,11 +8,13 @@
     <title>home2</title>
 </head>
 <body>
-    <header class="flex justify-between md:justify-end mx-2">
-          <nav class="hidden md:flex  gap-5  mr-8 "> 
+    <header class="flex justify-between  mx-2 py-4 ">
+             <a href="/code/home1.html" class="md:flex justify-start px-3"><img src="/image/arrow.png" alt="arrow  "></a>
+
+          <nav class="hidden md:flex md:justify-end  gap-5  mr-8  underline"> 
         <a href="##">liked</a>
         <a href="##">location</a>
-        <a href="/code/profile.html">login</a>
+        <a href="/code/profile.html">profile</a>
 
     </nav>
     </header>
@@ -72,6 +74,7 @@
                 <a href="/code/profile.html"><img src="/image/user.png" alt="user" width="32"></a>
             </button>
         </div>
+        
 
     </div>
 
