en cette partie j'ai travaille sur le responsive de tout les page

--- a/code/home1.html
+++ b/code/home1.html
@@ -74,7 +74,7 @@
     <div class="  grid cols-span-11   xl-grid-cols-3 mr-5 ml-5 lg:ml-70  border-2 border-black rounded-t-lg rounded-b-lg lg:w-[120vh] ">
             
             <div class=" bg-white shadow-lg  rounded-lg">
-                <img src="/image/people.jpg" alt="people" class=" lg:h-[60vh] bg-cover bg-center lg:w-[120vh] rounded-t-lg w-full">
+                <img src="/image/people.jpg" alt="people" class=" lg:h-[60vh] bg-cover bg-center md:w-[120vh] rounded-t-lg w-full ">
                 <div class="  py-4 flex justify-around ">
                     <h2 class="text-2xl">yellow river</h2>
                     <p><img src="/image/location.png" alt="location">maroc</p>
