--- a/code/home2.html
+++ b/code/home2.html
@@ -18,9 +18,9 @@
 
     </nav>
     </header>
-    <div class="  grid   lg:grid-cols-12 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg  lg:ml-70  lg:w-[120vh] lg:mt-5">
+    <div class="  grid   lg:grid-cols-12 xl-grid-cols-3 mr-5 ml-5 border-2 border-black rounded-t-lg rounded-b-lg  md:ml-55  lg:w-[120vh] lg:mt-5">
             <div class=" bg-white lg:col-span-12 shadow-lg rounded-lg">
-                <img src="/image/people.jpg" alt="people" class="rounded-t-lg w-full  lg:h-[60vh] bg-cover bg-center lg:w-[120vh]">
+                <img src="/image/people.jpg" alt="people" class="rounded-t-lg w-full  md:h-[60vh] bg-cover bg-center md:w-[120vh] ">
                 <div class="p-4 flex justify-around ">
                     <h2 class="text-2xl">yellow river</h2>
                     <p><img src="/image/location.png" alt="location">maroc</p>
@@ -46,6 +46,7 @@
                 Immerse yourself in the history and culture of Rabat with a personalized guided tour. Discover its iconic sites, hidden secrets, and benefit from expert advice for an authentic and rewarding experience. An unforgettable half-day of culture, history and beauty awaits you.
                 See itinerary
                 Wander blue-painted lanes and enjoy sweeping views over the Atlantic.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore iure, dignissimos corporis, fuga est quam quas animi dolores corrupti adipisci officiis numquam neque deleniti maxime pariatur laborum, nostrum suscipit mollitia!
             </h1>
         </div>
 
