--- a/code/profile.html
+++ b/code/profile.html
@@ -47,15 +47,15 @@
 
         <br> <br>
 
-        <div class="flex justify-around  my-6 ">
-            <img src="/image/koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
+        <div class="flex justify-around  my-6  md:flex-wrap ">
+            <img src="/image/koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190 md:my-5 ">
 
-            <img src="/image/sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
+            <img src="/image/sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg md:w-190 md:my-5  ">
         </div>
-        <div class="flex justify-around ">
-            <img src="/image/koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
+        <div class="flex justify-around  md:flex-wrap">
+            <img src="/image/koba.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190  md:my-5">
 
-            <img src="/image/sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg ">
+            <img src="/image/sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190  md:my-5">
         </div>
     </div>
     </section>
