en cette partie j'ai modifie la premier page de home  a index pour le hosting

--- a/code/home2.html
+++ b/code/home2.html
@@ -12,8 +12,8 @@
              <a href="/code/home1.html" class="md:flex justify-start px-3"><img src="/image/arrow.png" alt="arrow  "></a>
 
           <nav class="hidden md:flex md:justify-end  gap-5  mr-8  underline"> 
-        <a href="##">liked</a>
-        <a href="##">location</a>
+        <a href="/code/home2.html">liked</a>
+        <a href="/code/index.html">location</a>
         <a href="/code/profile.html">profile</a>
 
     </nav>
@@ -55,9 +55,9 @@
 
         <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 md:hidden">
         <div>
-            <button class="hover:bg-green-500 bg-green-600 rounded-full px-3 py-2" >
-               <a href="/code/home.html"> <img src="/image/home.png" alt="home" width="32"></a>
-            </button>
+            <div class="hover:bg-green-500 bg-green-600 rounded-full px-3 py-2" >
+               <a href="/code/index.html"> <img src="/image/home.png" alt="home" width="32"></a>
+            </div>
         </div>
         <div>
             <button  class="hover:bg-green-500 rounded-full px-3 py-2">
@@ -71,9 +71,9 @@
             </button>
         </div>
         <div>
-            <button  class="hover:bg-green-500 rounded-full px-3 py-2">
+            <div  class="hover:bg-green-500 rounded-full px-3 py-2">
                 <a href="/code/profile.html"><img src="/image/user.png" alt="user" width="32"></a>
-            </button>
+            </div>
         </div>
         
 
