--- a/code/profile.html
+++ b/code/profile.html
@@ -42,7 +42,7 @@
                 </div>
     </section>
 
-    <section>
+    <div>
          <div class="flex-wrap ">
 
         <br> <br>
@@ -58,13 +58,13 @@
             <img src="/image/sale.jpg" alt="koba" width="180" class="rounded-t-lg  rounded-b-lg  md:w-190  md:my-5">
         </div>
     </div>
-    </section>
+    </div>
      <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 md:hidden">
         <div>
-            <button class="hover:bg-green-500 rounded-full px-3 py-2" >
-                <a href="/code/home.html"><img src="/image/home.png" alt="home" width="32"></a>
+            <div class="hover:bg-green-500 rounded-full px-3 py-2" >
+                <a href="/code/index.html"><img src="/image/home.png" alt="home" width="32"></a>
                 
-            </button>
+            </div>
         </div>
         <div>
             <button  class="hover:bg-green-500 rounded-full px-3 py-2">
