--- a/code/home1.html
+++ b/code/home1.html
@@ -11,11 +11,11 @@
 
 <body>
     <header class="flex justify-between  mx-2 py-4 ">
-             <a href="/code/home.html" class="md:flex justify-start px-3"><img src="/image/arrow.png" alt="arrow  "></a>
+             <a href="/code/index.html" class="md:flex justify-start px-3"><img src="/image/arrow.png" alt="arrow  "></a>
 
           <nav class="hidden md:flex md:justify-end  gap-5  mr-8  underline"> 
-        <a href="##">liked</a>
-        <a href="##">location</a>
+        <a href="/code/home2.html">liked</a>
+        <a href="/code/index.html">location</a>
         <a href="/code/profile.html">profile</a>
 
     </nav>
@@ -127,9 +127,9 @@
             </button>
         </div>
         <div>
-            <button  class="hover:bg-green-500 rounded-full px-3 py-2">
+            <div  class="hover:bg-green-500 rounded-full px-3 py-2">
               <a href="/code/profile.html">  <img src="/image/user.png" alt="user" width="32" ></a>
-            </button>
+            </div>
         </div>
 
     </div>
