--- a/code/index.html
+++ b/code/index.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html>
     <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>home</title>
 
@@ -14,9 +13,10 @@
 
     <h1 class="text-5xl text-center text-black flex items-center  justify-center">Shoot beyond the limits</h1>
     <div class="flex items-center justify-center h-[575px]">
-        <button
+        <div
             class="bg-green-700 hover:bg-green-600 rounded-full py-3 px-6 flex items-center justify-center mx-10 text-white">
-            <img src="/image/right.png" alt="right"> <a href="home1.html">Get started </a></button>
+            Get started <a href="home1.html">  <img src="/image/right.png" alt="right"></a>
+    </div>
     </div>
 
 </body>
