modification de l'astructure de prrojet

--- a/description.html
+++ b/description.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header class="flex justify-between  mx-2 py-4 ">
-             <a href="/code/home1.html" class="md:flex justify-start px-3"><img src="/image/arrow.png" alt="arrow  "></a>
+             <a href="index.html" class="md:flex justify-start px-3"><img src="/image/arrow.png" alt="arrow  "></a>
 
           <nav class="hidden md:flex md:justify-end  gap-5  mr-8  underline"> 
-        <a href="/code/home2.html">liked</a>
-        <a href="/code/index.html">location</a>
-        <a href="/code/profile.html">profile</a>
+        <a href="description.html">liked</a>
+        <a href="index.html">location</a>
+        <a href="profile.html">profile</a>
 
     </nav>
     </header>
@@ -56,7 +56,7 @@
         <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 md:hidden">
         <div>
             <div class="hover:bg-green-500 bg-green-600 rounded-full px-3 py-2" >
-               <a href="/code/index.html"> <img src="/image/home.png" alt="home" width="32"></a>
+               <a href="index.html"> <img src="/image/home.png" alt="home" width="32"></a>
             </div>
         </div>
         <div>
@@ -72,7 +72,7 @@
         </div>
         <div>
             <div  class="hover:bg-green-500 rounded-full px-3 py-2">
-                <a href="/code/profile.html"><img src="/image/user.png" alt="user" width="32"></a>
+                <a href="profile.html"><img src="/image/user.png" alt="user" width="32"></a>
             </div>
         </div>
         
