--- a/home.html
+++ b/home.html
@@ -11,12 +11,12 @@
 
 <body>
     <header class="flex justify-between  mx-2 py-4 ">
-             <a href="/code/index.html" class="md:flex justify-start px-3"><img src="/image/arrow.png" alt="arrow  "></a>
+             <a href="index.html" class="md:flex justify-start px-3"><img src="/image/arrow.png" alt="arrow  "></a>
 
           <nav class="hidden md:flex md:justify-end  gap-5  mr-8  underline"> 
-        <a href="/code/home2.html">liked</a>
-        <a href="/code/index.html">location</a>
-        <a href="/code/profile.html">profile</a>
+        <a href="home2.html">liked</a>
+        <a href="index.html">location</a>
+        <a href="profile.html">profile</a>
 
     </nav>
     </header>
@@ -83,7 +83,7 @@
                 
 
                 </div>
-                <a href="/code/home2.html"><p class="text-center">rounded-b-lg</p></a>
+                <a href="home2.html"><p class="text-center">rounded-b-lg</p></a>
                 <br>
                 <br>
             </div>
@@ -128,7 +128,7 @@
         </div>
         <div>
             <div  class="hover:bg-green-500 rounded-full px-3 py-2">
-              <a href="/code/profile.html">  <img src="/image/user.png" alt="user" width="32" ></a>
+              <a href="profile.html">  <img src="/image/user.png" alt="user" width="32" ></a>
             </div>
         </div>
 
