--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="flex items-center justify-center h-[575px]">
         <div
             class="bg-green-700 hover:bg-green-600 rounded-full py-3 px-6 flex items-center justify-center mx-10 text-white">
-            Get started <a href="home1.html">  <img src="/image/right.png" alt="right"></a>
+            Get started <a href="home.html">  <img src="/image/right.png" alt="right"></a>
     </div>
     </div>
 
