--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
 <body>
 
 <header class="flex py-2 px-4">
-     <a href="/code/home2.html"><img src="/image/arrow.png" alt="arrow "></a>
+     <a href="description.html"><img src="/image/arrow.png" alt="arrow "></a>
 </header>
     <section>
 
@@ -62,7 +62,7 @@
      <div class=" flex justify-around sticky bottom-0 rounded-full px-3 py-4 bg-pink-200 md:hidden">
         <div>
             <div class="hover:bg-green-500 rounded-full px-3 py-2" >
-                <a href="/code/index.html"><img src="/image/home.png" alt="home" width="32"></a>
+                <a href="index.html"><img src="/image/home.png" alt="home" width="32"></a>
                 
             </div>
         </div>
